--- a/View/UI/FrmPrincipal.ui
+++ b/View/UI/FrmPrincipal.ui
@@ -18,7 +18,7 @@
   </property>
   <property name="windowIcon">
    <iconset>
-    <normaloff>../Imagens/FrmIcon_Car.png</normaloff>../Imagens/FrmIcon_Car.png</iconset>
+    <normaloff>../../Imagens/unknown (1).ico</normaloff>../../Imagens/unknown (1).ico</iconset>
   </property>
   <property name="autoFillBackground">
    <bool>false</bool>
@@ -347,6 +347,12 @@ color:rbg(200,200,200)
     </item>
     <item row="2" column="0">
      <widget class="QLabel" name="label_2">
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
+      </property>
       <property name="text">
        <string/>
       </property>
